--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
      <meta charset="utf-8">
      <title>JS BIN</title>
     </head>
-    <body>
-        <p>Ethan's Awesome -->
-    </body>
+    <body><p>Ethan's Awesome</body>
     </head>
 </html>
