--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
      <meta charset="utf-8">
      <title>JS BIN</title>
     </head>
-    <body><p>Ethan's Awesome</body>
+     <h1>Ethan Chewy</h1>
+     <body><p>Ethan's Awesome.</body>
+     <body><p>No he isn't.</p></body>
+     <body><p>by: Barrett Roman</p></body>
     </head>
 </html>
